[gd_scene load_steps=8 format=3 uid="uid://dn8e0jgjutr35"]

[ext_resource type="PackedScene" uid="uid://bkr1f8qxvn2ej" path="res://entities/player/Player.tscn" id="1_player"]
[ext_resource type="PackedScene" uid="uid://cwhp2kdt5q7m8" path="res://components/DebugHUD.tscn" id="2_debug"]
[ext_resource type="PackedScene" uid="uid://bdt4sgcfcbadq" path="res://levels/Room1.tscn" id="2_qkoq2"]
[ext_resource type="PackedScene" uid="uid://wjo00qd5kcqq" path="res://levels/Room2.tscn" id="3_k0gbw"]
[ext_resource type="Texture2D" uid="uid://b2bfx33q040to" path="res://assets/art/environment/backgrounds/sky_background.png" id="3_sky"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="4_pchost"]
[ext_resource type="Script" uid="uid://bxkrhu0b57ocp" path="res://components/RoomTransitionManager.gd" id="5_rtm"]

[node name="MainLevel" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="FarBackground" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -50
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(3840, 0)

[node name="SkySprite" type="Sprite2D" parent="ParallaxBackground/FarBackground"]
position = Vector2(960, 540)
scale = Vector2(3.75, 3.75)
texture = ExtResource("3_sky")

[node name="MidGround" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -10
motion_scale = Vector2(0.8, 0.8)

[node name="Foreground" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 5
motion_scale = Vector2(1.1, 1.1)

[node name="Rooms" type="Node2D" parent="."]

[node name="Room1" parent="Rooms" instance=ExtResource("2_qkoq2")]

[node name="Room2" parent="Rooms" instance=ExtResource("3_k0gbw")]
position = Vector2(2000, 0)

[node name="Player" parent="." instance=ExtResource("1_player")]
position = Vector2(200, 300)

[node name="RoomTransitionManager" type="Node" parent="."]
script = ExtResource("5_rtm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
zoom = Vector2(0.45, 0.45)

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("4_pchost")

[node name="DebugHUD" parent="." instance=ExtResource("2_debug")]
